quicksort is now a namespace. Fixed test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(lab2)
 set(CMAKE_CXX_STANDARD 11)
 find_package( Threads REQUIRED )  # Multithreading package required
 
-add_executable(quicksort src/quicksort.cpp)
-target_link_libraries(quicksort Threads::Threads)    # link with threads library
+add_executable(quicksortMain src/quicksortMain.cpp)
+target_link_libraries(quicksortMain Threads::Threads src)    # link with threads library
 
 add_executable(pi src/pi.cpp)
 target_link_libraries(pi Threads::Threads)
