--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,6 @@ set(HEADERS quicksort.h)
 set(SOURCES quicksort.cpp)
 
 add_library(src ${HEADERS} ${SOURCES})
+
+add_executable(quicksortMain quicksortMain.cpp)
+target_link_libraries(quicksortMain Threads::Threads src)    # link with threads library
