--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(src)
 
-set(HEADERS quicksort.h pi.h)
+set(HEADERS quicksort.h pi.h integration.h)
 
 set(SOURCES quicksort.cpp pi.cpp)
 
@@ -11,3 +11,6 @@ target_link_libraries(quicksortMain Threads::Threads src)    # link with threads
 
 add_executable(piMain piMain.cpp)
 target_link_libraries(piMain src)
+
+add_executable(integrationMain integrationMain.cpp)
+target_link_libraries(integrationMain Threads::Threads src)
